// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-5:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-5[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-8 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<div
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Radio"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-RadioHiddenInput bb-Box"
    id="id-test"
    type="radio"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-RadioIcon bb-Box"
  />
</div>
`;

exports[`composition hook should return with Radio props 1`] = `
Object {
  "aria-describedby": "id-test",
  "aria-invalid": false,
  "aria-required": undefined,
  "children": <React.Fragment>
    .emotion-0 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0[disabled]+.bb-RadioIcon {
  background-color: #000000;
  box-shadow: unset;
}

.emotion-0:focus+.bb-RadioIcon {
  border-color: #000000;
  box-shadow: #000000 0px 0px 0px 3px!important;
}

.emotion-0:not([disabled]):checked+.bb-RadioIcon {
  border-color: #000000;
}

.emotion-0:checked+.bb-RadioIcon::before {
  background: #000000;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-0[disabled]:checked+.bb-RadioIcon::before {
  border-color: #000000;
  background: #000000;
}

<Box
      className="emotion-0 bb-RadioHiddenInput"
      id="id-test"
      type="radio"
      use="input"
    />
    .emotion-0 {
  -webkit-appearance: none;
  background-color: #000000;
  border: 1px solid #000000;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<Box
      className="emotion-0 bb-RadioIcon"
    />
  </React.Fragment>,
  "className": "css-i5mf5v css-63it0p css-1qnz8fc bb-Box bb-Radio",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Radio"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-5:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-5[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-8 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-Radio"
>
  <input
    class="emotion-1 emotion-4 emotion-5 bb-RadioHiddenInput bb-Box"
    id="id-test"
    type="radio"
  />
  <div
    class="emotion-1 emotion-4 emotion-8 bb-RadioIcon bb-Box"
  />
</label>
`;

exports[`overrides Radio.HiddenInput.base should render correctly 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-5:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-5[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-5 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-8 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Radio"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-RadioHiddenInput bb-Box"
    id="id-test"
    type="radio"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-RadioIcon bb-Box"
  />
</label>
`;

exports[`overrides Radio.Icon.base should render correctly 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-5:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-5[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-8 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8 {
  background-color: var(--bb-palette-red, #ff0000);
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Radio"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-RadioHiddenInput bb-Box"
    id="id-test"
    type="radio"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-RadioIcon bb-Box"
  />
</label>
`;

exports[`overrides Radio.Label.base should render correctly 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-5:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-5[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-8 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Radio"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-RadioHiddenInput bb-Box"
    id="id-test"
    type="radio"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-RadioIcon bb-Box"
  />
</label>
`;

exports[`overrides Radio.base should render correctly 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-5:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-5[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-8 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Radio"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-RadioHiddenInput bb-Box"
    id="id-test"
    type="radio"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-RadioIcon bb-Box"
  />
</label>
`;

exports[`props should assign a ref via radioRef 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-2:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-2:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-2:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

<input
  class="emotion-0 emotion-1 emotion-2 bb-RadioHiddenInput bb-Box"
  id="id-test"
  type="radio"
/>
`;

exports[`props should render correctly 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-5:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-5[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-8 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Radio"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-RadioHiddenInput bb-Box"
    id="id-test"
    type="radio"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-RadioIcon bb-Box"
  />
</label>
`;

exports[`props should render correctly for danger state 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-RadioIcon {
  border-color: var(--bb-palette-danger, #000000);
}

.emotion-5:not(:checked)+.bb-RadioIcon {
  box-shadow: var(--bb-palette-dangerTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-5[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-5:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-5[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-8 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="true"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Radio"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-RadioHiddenInput bb-Box"
    id="id-test"
    type="radio"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-RadioIcon bb-Box"
  />
</label>
`;

exports[`props should render correctly for success state 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-RadioIcon {
  border-color: var(--bb-palette-success, #000000);
}

.emotion-5:not(:checked)+.bb-RadioIcon {
  box-shadow: var(--bb-palette-successTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-5[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-5:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-5[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-8 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Radio"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-RadioHiddenInput bb-Box"
    id="id-test"
    type="radio"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-RadioIcon bb-Box"
  />
</label>
`;

exports[`props should render correctly for warning state 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-RadioIcon {
  border-color: var(--bb-palette-warning, #000000);
}

.emotion-5:not(:checked)+.bb-RadioIcon {
  box-shadow: var(--bb-palette-warningTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-5[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-5:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-5[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-8 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Radio"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-RadioHiddenInput bb-Box"
    id="id-test"
    type="radio"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-RadioIcon bb-Box"
  />
</label>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  background-color: var(--bb-palette-primary, #000000)!important;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-5:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-5[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-8 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Radio"
>
  <input
    class="emotion-1 emotion-4 emotion-5 bb-RadioHiddenInput bb-Box"
    id="id-test"
    type="radio"
  />
  <div
    class="emotion-1 emotion-4 emotion-8 bb-RadioIcon bb-Box"
  />
</label>
`;

exports[`props should render correctly with checked 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-5:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-5[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-8 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Radio"
>
  <input
    checked=""
    class="emotion-1 emotion-2 emotion-5 bb-RadioHiddenInput bb-Box"
    id="id-test"
    type="radio"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-RadioIcon bb-Box"
  />
</label>
`;

exports[`props should render correctly with defaultChecked 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-5:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-5[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-8 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Radio"
>
  <input
    checked=""
    class="emotion-1 emotion-2 emotion-5 bb-RadioHiddenInput bb-Box"
    id="id-test"
    type="radio"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-RadioIcon bb-Box"
  />
</label>
`;

exports[`props should render correctly with disabled 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-5:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-5[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-8 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Radio"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-RadioHiddenInput bb-Box"
    disabled=""
    id="id-test"
    type="radio"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-RadioIcon bb-Box"
  />
</label>
`;

exports[`props should render correctly with isRequired 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-5:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-5[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-8 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  aria-required="true"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Radio"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-RadioHiddenInput bb-Box"
    id="id-test"
    type="radio"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-RadioIcon bb-Box"
  />
</label>
`;

exports[`props should render correctly with label 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-5:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-5[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-8 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-9 {
  display: block;
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-9::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-9::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-9:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-11 {
  margin-left: 0.5rem!important;
}

.emotion-12.emotion-12 {
  font-weight: 400;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Radio"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-RadioHiddenInput bb-Box"
    id="id-test"
    type="radio"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-RadioIcon bb-Box"
  />
  <span
    class="emotion-9 emotion-1 emotion-11 emotion-12 bb-RadioLabel bb-Box bb-Label"
    for="id-test"
    id="id-test"
  >
    Hello world
  </span>
</label>
`;

exports[`props should render correctly with name 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-5:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-5[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-8 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Radio"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-RadioHiddenInput bb-Box"
    id="id-test"
    name="checkboxRocks"
    type="radio"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-RadioIcon bb-Box"
  />
</label>
`;

exports[`props should render correctly with value 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-5:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-5[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-8 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Radio"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-RadioHiddenInput bb-Box"
    id="id-test"
    type="radio"
    value="checkboxValue"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-RadioIcon bb-Box"
  />
</label>
`;

exports[`theming Radio.HiddenInput.base should render correctly 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-5:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-5[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-5 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-8 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Radio"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-RadioHiddenInput bb-Box"
    id="id-test"
    type="radio"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-RadioIcon bb-Box"
  />
</label>
`;

exports[`theming Radio.Icon.base should render correctly 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-5:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-5[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-8 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8 {
  background-color: var(--bb-palette-red, #ff0000);
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Radio"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-RadioHiddenInput bb-Box"
    id="id-test"
    type="radio"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-RadioIcon bb-Box"
  />
</label>
`;

exports[`theming Radio.Label.base should render correctly 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-5:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-5[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-8 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Radio"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-RadioHiddenInput bb-Box"
    id="id-test"
    type="radio"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-RadioIcon bb-Box"
  />
</label>
`;

exports[`theming Radio.base should render correctly 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-5:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-5[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-8 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Radio"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-RadioHiddenInput bb-Box"
    id="id-test"
    type="radio"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-RadioIcon bb-Box"
  />
</label>
`;
